# PagerMaid

./: .gitignore  Dockerfile  Dockerfile.alpine  INSTALL.md  README.md  ROADMAP.md  config.gen.yml  pyproject.toml  requirements.txt
.github/ISSUE_TEMPLATE/: bug_report_en.md  bug_report_zh.md  feature_request_en.md  feature_request_zh.md
docs/: core-runtime-stabilization-plan.md  web-compatibility.md  web-deployment.md  web-inventory.md  web-migration-notes.md  web-refactor-plan.md
docs/releases/: 1.6.0.md
languages/built-in/: en.yml  ja.yml  zh-cn.yml  zh-tw.yml
pagermaid/: __main__.py  config.py  hook.py  inject.py  listener.py  runtime.py  static.py  version.py
pagermaid/assets/: config.gen.yml
pagermaid/common/: alias.py  plugin.py  reload.py  status.py  system.py
pagermaid/dependence/: __init__.py  _scheduler.py
pagermaid/enums/: _client.py  command.py
pagermaid/modules/: __init__.py  account.py  avoid.py  backup.py  help.py  message.py  mixpanel.py  plugin.py  prune.py  reload.py  sentry.py  status.py  system.py
pagermaid/services/: __init__.py  _bot.py
pagermaid/update/: v1402.py
pagermaid/utils/: __init__.py  _eval.py  _session_manager.py  bot_utils.py  listener.py
pagermaid/web/: __init__.py  app.py  dependencies.py  exceptions.py  lifespan.py  settings.py
pagermaid/web/api/: __init__.py  bot_info.py  command_alias.py  ignore_groups.py  login.py  plugin.py  status.py  utils.py  web_login.py
pagermaid/web/auth/: __init__.py  session.py
pagermaid/web/html/: __init__.py  footer.html  github_logo.html  logo.html  web_login.html
pagermaid/web/pages/: command_alias.py  home_page.py  ignore_groups.py  login.py  main.py  plugin_local_manage.py  plugin_remote_manage.py
pagermaid/web/routers/: __init__.py  api.py  html.py
pyromod/listen/: __init__.py  listen.py
pyromod/methods/: get_dialogs_list.py  sign_in_qrcode.py
tests/runtime/: test_hook_diagnostics.py  test_lifecycle.py  test_reload_characterization.py
tests/web/: conftest.py  test_characterization.py  test_runtime_reload.py  test_settings.py
utils/: docker.md  install.sh  mksession.py
